# recipes

./: docker-compose.yml
auth-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
auth-service/auth_service/: __main__.py
auth-service/auth_service/errors/: error_handler.py  errors.py
auth-service/auth_service/models/: clients_model.py
auth-service/auth_service/routers/: __init__.py  client.py
auth-service/auth_service/schemas/: __init__.py  client_register.py  register_code.py
auth-service/auth_service/schemas/client/: __init__.py
auth-service/auth_service/schemas/client/request/: __init__.py  client_delete_request.py  client_login_request.py  client_register_request.py  client_update_request.py
auth-service/auth_service/schemas/client/response/: __init__.py  client_delete_response.py  client_login_response.py  client_register_response.py  client_update_response.py
auth-service/auth_service/utils/: async_session.py  config.py  jwt_controller.py  password_utils.py  session.py  smtp_server.py
auth-service/tests/: conftest.py  test_login.py
backend/: Dockerfile  go.mod  go.sum
backend/cmd/: main.go
backend/config/: .env.example  config.go
backend/controllers/: recipe_controller.go
backend/db/: db.go
backend/models/: recipe.go
backend/routers/: routers.go
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config copy.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  recipes.ts
frontend/src/components/: AuthModal.scss  AuthModal.tsx  FilterPanel.scss  FilterPanel.tsx  Footer.scss  (+9 more)
(+4 files in other folders)
